fix file name overflow in FileManager

--- a/client/src/interface/pages/FileManager/index.css
+++ b/client/src/interface/pages/FileManager/index.css
@@ -5,6 +5,7 @@
 .upload-item-name{
     max-width: 250px;
     overflow-x: hidden;
+    text-overflow: ellipsis;
 }
 
 .upload-item-cancel-button{
